# templategraph-php

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md  about.hbs  about.toml  composer.json  deny.toml  lefthook.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yaml
schemas/: output-graph-v1.schema.json
src/: cli.rs  config.rs  error.rs  main.rs  output.rs  path.rs
src/cli/: exit.rs
src/graph/: builder.rs  mod.rs  model.rs
src/output/: dot.rs  json.rs  mod.rs
src/output/snapshots/: templategraph_php__output__dot__snapshots__snapshot_all_include_kinds.snap  templategraph_php__output__dot__snapshots__snapshot_cycle_does_not_loop.snap  templategraph_php__output__dot__snapshots__snapshot_missing_include_target.snap  templategraph_php__output__dot__snapshots__snapshot_multiple_entrypoints_share_node.snap  templategraph_php__output__dot__snapshots__snapshot_single_include.snap  templategraph_php__output__dot__snapshots__snapshot_unresolved_dynamic_argument.snap  templategraph_php__output__json__snapshots__snapshot_all_include_kinds.snap  templategraph_php__output__json__snapshots__snapshot_cycle_does_not_loop.snap  templategraph_php__output__json__snapshots__snapshot_missing_include_target.snap  templategraph_php__output__json__snapshots__snapshot_multiple_entrypoints_share_node.snap  (+2 more)
src/parser/: blade.rs  mod.rs  php.rs  resolver.rs
src/scanner/: filesystem.rs  in_memory.rs  mod.rs
tests/: cucumber.rs  integration_cli.rs  snapshot_demo.rs
tests/features/: sanity.feature
