[package]
name = "templategraph-php"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Kota Kobayashi <kk@cobaco.ch>"]
description = "Template include graph generator for PHP static sites"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cobacoch/templategraph-php"
readme = "README.md"
keywords = ["php", "template", "graph", "include", "static-site"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "1"
tree-sitter = "0.26"
tree-sitter-php = "0.24"

[dev-dependencies]
assert_cmd = "2"
cucumber = "0.23"
futures-executor = "0.3"
insta = "1"
tempfile = "3"

[[test]]
name = "cucumber"
harness = false
